Add ttl for job

--- a/gitops/applications/base/sc-storage/rgw-endpoint-job.yaml
+++ b/gitops/applications/base/sc-storage/rgw-endpoint-job.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   template:
     spec:
+      ttlSecondsAfterFinished: 30
+      backoffLimit: 6
       restartPolicy: Never
       serviceAccountName: ceph-job-sa
       containers:
