--- a/gitops/applications/overlays/rdbms_provider/dbaas/db/claim.yaml
+++ b/gitops/applications/overlays/rdbms_provider/dbaas/db/claim.yaml
@@ -5,18 +5,57 @@ metadata:
   namespace: ${ARGOCD_ENV_namespace}
 spec:
   parameters:
-    consumerClusterType: controlcenter #${ARGOCD_ENV_cluster_type} #TODO
     clusterName: ${ARGOCD_ENV_cluster_name}
     externalServiceName: ${ARGOCD_ENV_externalservice_name}
     appNamespace: ${ARGOCD_ENV_namespace}
-    postgres:
-      crVersion: "2.5.0"
-      pgVersion: 16
-      dbUsername: ${ARGOCD_ENV_db_username}
-      dbName: ${ARGOCD_ENV_db_name}
-      dbSecret: ${ARGOCD_ENV_db_secret}
-      replicas: ${ARGOCD_ENV_postgres_replicas}
-      storageSize: ${ARGOCD_ENV_postgres_storage_size}
+    crVersion: ${ARGOCD_ENV_cr_version}
+    pgVersion: ${ARGOCD_ENV_pg_version}
+    dbSecret: ${ARGOCD_ENV_db_secret}
+    dbUsername: ${ARGOCD_ENV_db_username}
+    dbName: ${ARGOCD_ENV_db_name}
+    replicas: ${ARGOCD_ENV_postgres_replicas}
+    storageSize: ${ARGOCD_ENV_postgres_storage_size}
+    image: ${ARGOCD_ENV_postgres_image}
+
+    resources:
+      limits:
+        cpu: ${ARGOCD_ENV_postgres_cpu_limit}
+        memory: ${ARGOCD_ENV_postgres_memory_limit}
+      requests:
+        cpu: ${ARGOCD_ENV_postgres_cpu_request}
+        memory: ${ARGOCD_ENV_postgres_memory_request}
+
+    priorityClassName: ${ARGOCD_ENV_priority_class_name}  # Optional
+
+    tolerations: []
+
+    backup:
+      image: ${ARGOCD_ENV_backup_image}
+      objectStoreEndpoint: ${ARGOCD_ENV_backup_endpoint}
+      bucket: ${ARGOCD_ENV_backup_bucket}
+      bucketRegion: ${ARGOCD_ENV_backup_region}
+      fullBackupCronSchedule: ${ARGOCD_ENV_backup_full_schedule}
+      differentialBackupCronSchedule: ${ARGOCD_ENV_backup_diff_schedule}
+
+    proxy:
+      pgBouncer:
+        image: ${ARGOCD_ENV_pgbouncer_image}
+        replicas: ${ARGOCD_ENV_pgbouncer_replicas}
+        exposeSuperusers: ${ARGOCD_ENV_pgbouncer_expose_superusers}
+        globalConfig:
+          pool_mode: session
+          query_wait_timeout: "10"
+          max_prepared_statements: "0"
+        resources:
+          limits:
+            cpu: ${ARGOCD_ENV_pgbouncer_cpu_limit}
+            memory: ${ARGOCD_ENV_pgbouncer_memory_limit}
+          request:
+            cpu: ${ARGOCD_ENV_pgbouncer_cpu_request}
+            memory: ${ARGOCD_ENV_pgbouncer_memory_request}
+        expose:
+          type: ${ARGOCD_ENV_pgbouncer_expose_type}
+        tolerations: []
 
   providerConfigsRef:
     scK8sProviderName: sc-kubernetes-provider
