--- a/gitops/argo-apps/base/netbird-pre.yaml
+++ b/gitops/argo-apps/base/netbird-pre.yaml
@@ -156,18 +156,6 @@ spec:
           - name: "vault_namespace"
             value: "${ARGOCD_ENV_vault_vault_namespace}"
 
-          - name: "postgres_replicas"
-            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_replicas}"
-
-          - name: "postgres_proxy_replicas"
-            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_proxy_replicas}"
-
-          - name: "postgres_storage_size"
-            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_storage_size}"
-
-          - name: "pgdb_helm_version"
-            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgdb_helm_version}"
-
           - name: "allow_major_version_upgrade"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_allow_major_version_upgrade}"
 
@@ -263,3 +251,90 @@ spec:
 
           - name: "port"
             value: "5432"
+
+          - name: "postgres_replicas"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_replicas}"
+
+          - name: "postgres_proxy_replicas"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_proxy_replicas}"
+
+          - name: "postgres_storage_size"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_storage_size}"
+
+          - name: "pgdb_helm_version"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgdb_helm_version}"
+
+          - name: "cr_version"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_cr_version}"
+
+          - name: "pg_version"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pg_version}"
+
+          - name: "postgres_image"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_image}"
+
+          - name: "postgres_cpu_limit"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_cpu_limit}"
+
+          - name: "postgres_memory_limit"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_memory_limit}"
+
+          - name: "postgres_cpu_request"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_cpu_request}"
+
+          - name: "postgres_memory_request"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_postgres_memory_request}"
+
+          - name: "priority_class_name"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_priority_class_name}"
+
+          - name: "backup_image"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_backup_image}"
+
+          - name: "backup_endpoint"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_backup_endpoint}"
+
+          - name: "backup_bucket"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_backup_bucket}"
+
+          - name: "backup_region"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_backup_region}"
+
+          - name: "backup_full_schedule"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_backup_full_schedule}"
+
+          - name: "backup_diff_schedule"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_backup_diff_schedule}"
+
+          - name: "pgbouncer_image"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_image}"
+
+          - name: "pgbouncer_replicas"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_replicas}"
+
+          - name: "pgbouncer_expose_superusers"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_expose_superusers}"
+
+          - name: "pgbouncer_pool_mode"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_pool_mode}"
+
+          - name: "pgbouncer_query_wait_timeout"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_query_wait_timeout}"
+
+          - name: "pgbouncer_max_prepared_statements"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_max_prepared_statements}"
+
+          - name: "pgbouncer_cpu_limit"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_cpu_limit}"
+
+          - name: "pgbouncer_memory_limit"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_memory_limit}"
+
+          - name: "pgbouncer_cpu_request"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_cpu_request}"
+
+          - name: "pgbouncer_memory_request"
+            value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_memory_request}"
+
+          - name: "pgbouncer_expose_type"
+            value: "LoadBalancer"
