ttl after job finish

--- a/gitops/applications/base/sc-storage-post-config/rook-external-config-job.yaml
+++ b/gitops/applications/base/sc-storage-post-config/rook-external-config-job.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   template:
     spec:
+      ttlSecondsAfterFinished: 30
       restartPolicy: Never
       dnsPolicy: ClusterFirstWithHostNet
       serviceAccountName: ceph-job-sa
