fix: Add dns configs for rgw

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - rook-ceph-namespace.yaml
   - sync-secrets-cm.yaml
+  - rgw-route53-record.yaml
 
 helmCharts:
   - name: rook-ceph
