--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/rgw-route53-record.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/rgw-route53-record.yaml
@@ -12,4 +12,4 @@ spec:
       - ${ARGOCD_ENV_rook_ceph_rgw_external_ip}
     zoneId: ${ARGOCD_ENV_dns_zone_id}
   providerConfigsRef:
-    awsProviderConfigName: aws-provider-config
+    awsProviderConfigName: aws-cp-upbound-provider-config
