feat: deploy new vault rework

--- a/gitops/argo-apps/base/vault-post-config.yaml
+++ b/gitops/argo-apps/base/vault-post-config.yaml
@@ -42,6 +42,24 @@ spec:
           - name: "vault_namespace"
             value: "${ARGOCD_ENV_vault_vault_namespace}"
 
+          - name: "vault_kv_secret"
+            value: "${ARGOCD_ENV_vault_vault_vault_kv_secret}"
+
+          - name: "crossplane_namespace"
+            value: "${ARGOCD_ENV_utils_crossplane_namespace}"
+
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      targetRevision: ${ARGOCD_ENV_vault_application_gitrepo_tag}
+      path: gitops/applications/base/vault-post-config
+      plugin:
+        name: envsubst
+        env:
+          - name: "vault_keys_secret"
+            value: "${ARGOCD_ENV_vault_vault_vault_keys_secret}"
+
+          - name: "vault_namespace"
+            value: "${ARGOCD_ENV_vault_vault_namespace}"
+
           - name: "vault_k8s_admin_auth_path"
             value: "${ARGOCD_ENV_vault_post_config_vault_k8s_admin_auth_path}"
 
@@ -92,27 +110,3 @@ spec:
 
           - name: "object_storage_access_role"
             value: "${ARGOCD_ENV_maintenance_velero_object_storage_access_role}"
-
-    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
-      targetRevision: ${ARGOCD_ENV_vault_application_gitrepo_tag}
-      path: gitops/applications/base/vault-post-config
-      plugin:
-        name: envsubst
-        env:
-          - name: "vault_keys_secret"
-            value: "${ARGOCD_ENV_vault_vault_vault_keys_secret}"
-
-          - name: "vault_namespace"
-            value: "${ARGOCD_ENV_vault_vault_namespace}"
-
-          - name: "vault_k8s_admin_auth_path"
-            value: "${ARGOCD_ENV_vault_post_config_vault_k8s_admin_auth_path}"
-
-          - name: "vault_k8s_admin_role_name"
-            value: "${ARGOCD_ENV_vault_post_config_vault_k8s_admin_role_name}"
-
-          - name: "vault_read_all_kv_secrets_policy_name"
-            value: "${ARGOCD_ENV_vault_post_config_vault_read_all_kv_secrets_policy_name}"
-
-          - name: "vault_kv_secret"
-            value: "${ARGOCD_ENV_vault_vault_vault_kv_secret}"
