--- a/gitops/applications/base/vault-post-config/vault-post-config.yaml
+++ b/gitops/applications/base/vault-post-config/vault-post-config.yaml
@@ -1,3 +1,13 @@
+apiVersion: v1
+stringData:
+  clientId: ${ARGOCD_ENV_cloud_platform_api_client_id}
+  clientSecret: ${ARGOCD_ENV_cloud_platform_api_client_secret}
+kind: Secret
+metadata:
+  name: cloud-platform-creds
+  namespace: ${ARGOCD_ENV_vault_namespace}
+type: Opaque
+---
 apiVersion: vault.mojaloop.io/v1alpha1
 kind: VaultPostConfig
 metadata:
@@ -12,6 +22,23 @@ spec:
     k8sAdminRoleName: "${ARGOCD_ENV_vault_k8s_admin_role_name}"
     adminPolicyName: "vault-admin"
     readKvSecretsPolicyName: "${ARGOCD_ENV_vault_read_all_kv_secrets_policy_name}"
+    aws:
+      objectStorageBackend:
+        enabled: true
+        path: "${ARGOCD_ENV_object_storage_backend_path}"
+        cloudRole: "${ARGOCD_ENV_object_storage_cloud_role}"
+        accessRole: "${ARGOCD_ENV_object_storage_access_role}"
+      dnsBackend:
+        enabled: true
+        path: "${ARGOCD_ENV_object_storage_backend_path}"
+        accessRole: "${ARGOCD_ENV_dns_access_role}"
+        externalDnsRole: "${ARGOCD_ENV_external_dns_cloud_role}"
+        certManagerAccessRole: "${ARGOCD_ENV_cert_manager_access_role}"
+        certManagerCloudPolicy: "${ARGOCD_ENV_cert_manager_cloud_policy}"
+      region: "${ARGOCD_ENV_dns_cloud_api_region}"
+      credentialsSecretRef:
+        name: "cloud-platform-creds"
+        namespace: ${ARGOCD_ENV_vault_namespace}
   providerConfigsRef:
     vaultProviderName: vault-provider
   managementPolicies:
