--- a/gitops/applications/base/vault/vault-crossplane.yaml
+++ b/gitops/applications/base/vault/vault-crossplane.yaml
@@ -13,43 +13,43 @@
 #     source: Secret
 #   skip_child_token: true
 # ---
-apiVersion: tf.upbound.io/v1beta1
-kind: ProviderConfig
-metadata:
-  name: vault-post-config
-spec:
-  # Note that unlike most provider configs this one supports an array of
-  # credentials. This is because each Terraform workspace uses a single
-  # Crossplane provider config, but could use multiple Terraform providers each
-  # with their own credentials.
-  credentials:
-    - filename: terraform.tfvars.json
-      source: Secret
-      secretRef:
-        namespace: ${ARGOCD_ENV_vault_namespace}
-        name: ${ARGOCD_ENV_vault_keys_secret}
-        key: vault-keys.json
-  # This optional configuration block can be used to inject HCL into any
-  # workspace that uses this provider config, for example to setup Terraform
-  # providers.
-  configuration: |
-    terraform {
-        backend "kubernetes" {
-          secret_suffix     = "providerconfig-vault-post-config"
-          namespace         = "${ARGOCD_ENV_vault_namespace}"
-          in_cluster_config = true
-        }
-        required_providers {
-          vault = "${ARGOCD_ENV_vault_tf_provider_version}"
-        }
-      }
-      variable "root_token" {
-        type = string
-      }
-      provider "vault" {
-        address = "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
-        token   = var.root_token
-      }
+# apiVersion: tf.upbound.io/v1beta1
+# kind: ProviderConfig
+# metadata:
+#   name: vault-post-config
+# spec:
+#   # Note that unlike most provider configs this one supports an array of
+#   # credentials. This is because each Terraform workspace uses a single
+#   # Crossplane provider config, but could use multiple Terraform providers each
+#   # with their own credentials.
+#   credentials:
+#     - filename: terraform.tfvars.json
+#       source: Secret
+#       secretRef:
+#         namespace: ${ARGOCD_ENV_vault_namespace}
+#         name: ${ARGOCD_ENV_vault_keys_secret}
+#         key: vault-keys.json
+#   # This optional configuration block can be used to inject HCL into any
+#   # workspace that uses this provider config, for example to setup Terraform
+#   # providers.
+#   configuration: |
+#     terraform {
+#         backend "kubernetes" {
+#           secret_suffix     = "providerconfig-vault-post-config"
+#           namespace         = "${ARGOCD_ENV_vault_namespace}"
+#           in_cluster_config = true
+#         }
+#         required_providers {
+#           vault = "${ARGOCD_ENV_vault_tf_provider_version}"
+#         }
+#       }
+#       variable "root_token" {
+#         type = string
+#       }
+#       provider "vault" {
+#         address = "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
+#         token   = var.root_token
+#       }
 # ---
 # apiVersion: tf.upbound.io/v1beta1
 # kind: Workspace
