--- a/gitops/applications/base/vault-post-config/vault-post-config.yaml
+++ b/gitops/applications/base/vault-post-config/vault-post-config.yaml
@@ -41,5 +41,6 @@ spec:
       region: "${ARGOCD_ENV_dns_cloud_api_region}"
   providerConfigsRef:
     vaultProviderName: vault-provider
+    kubernetesProviderName: kubernetes-provider
   managementPolicies:
     - "*"
