--- a/gitops/argo-apps/base/kyverno.yaml
+++ b/gitops/argo-apps/base/kyverno.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ${ARGOCD_ENV_argocd_app_namespace}
   annotations:
     argocd.argoproj.io/sync-wave: ${ARGOCD_ENV_utils_sync_wave}
+    argocd.argoproj.io/compare-options: ServerSideDiff=true,IncludeMutationWebhook=true
 
   finalizers:
     - resources-finalizer.argocd.argoproj.io
