--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -23,7 +23,7 @@ netbird_perc_postgres_proxy_replicas: "'1'"
 netbird_perc_pgdb_helm_version: "2.4.0"
 netbird_perc_postgres_storage_size: "20Gi"
 netbird_perc_cr_version: "2.6.0"
-netbird_perc_pg_version: 16
+netbird_perc_pg_version: "'16'"
 netbird_perc_postgres_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-postgres"
 netbird_perc_postgres_cpu_limit: "500m"
 netbird_perc_postgres_memory_limit: "1024Mi"
@@ -37,11 +37,11 @@ netbird_perc_backup_region: "eu-west-1"
 netbird_perc_backup_full_schedule: "0 1 * * *"
 netbird_perc_backup_diff_schedule: "0 6 * * *"
 netbird_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
-netbird_perc_pgbouncer_replicas: 3
-netbird_perc_pgbouncer_expose_superusers: false
+netbird_perc_pgbouncer_replicas: "'3'"
+netbird_perc_pgbouncer_expose_superusers: "'false'"
 netbird_perc_pgbouncer_pool_mode: session
-netbird_perc_pgbouncer_query_wait_timeout: "10"
-netbird_perc_pgbouncer_max_prepared_statements: "0"
+netbird_perc_pgbouncer_query_wait_timeout: "'10'"
+netbird_perc_pgbouncer_max_prepared_statements: "'0'"
 netbird_perc_pgbouncer_cpu_limit: "200m"
 netbird_perc_pgbouncer_memory_limit: "128Mi"
 netbird_perc_pgbouncer_cpu_request: "100m"
@@ -296,7 +296,7 @@ gitlab_perc_postgres_proxy_replicas: "'1'"
 gitlab_perc_postgres_storage_size: "10Gi"
 gitlab_perc_pgdb_helm_version: "2.4.0"
 gitlab_perc_cr_version: "2.6.0"
-gitlab_perc_pg_version: 16
+gitlab_perc_pg_version: "'16'"
 gitlab_perc_postgres_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-postgres"
 gitlab_perc_postgres_cpu_limit: "500m"
 gitlab_perc_postgres_memory_limit: "1024Mi"
@@ -310,11 +310,11 @@ gitlab_perc_backup_region: "eu-west-1"
 gitlab_perc_backup_full_schedule: "0 1 * * *"
 gitlab_perc_backup_diff_schedule: "0 6 * * *"
 gitlab_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
-gitlab_perc_pgbouncer_replicas: 3
-gitlab_perc_pgbouncer_expose_superusers: false
+gitlab_perc_pgbouncer_replicas: "'3'"
+gitlab_perc_pgbouncer_expose_superusers: "'false'"
 gitlab_perc_pgbouncer_pool_mode: session
-gitlab_perc_pgbouncer_query_wait_timeout: "10"
-gitlab_perc_pgbouncer_max_prepared_statements: "0"
+gitlab_perc_pgbouncer_query_wait_timeout: "'10'"
+gitlab_perc_pgbouncer_max_prepared_statements: "'0'"
 gitlab_perc_pgbouncer_cpu_limit: "200m"
 gitlab_perc_pgbouncer_memory_limit: "128Mi"
 gitlab_perc_pgbouncer_cpu_request: "100m"
@@ -344,7 +344,7 @@ praefect_perc_postgres_proxy_replicas: "'1'"
 praefect_perc_postgres_storage_size: "10Gi"
 praefect_perc_pgdb_helm_version: "2.4.0"
 praefect_perc_cr_version: "2.6.0"
-praefect_perc_pg_version: 16
+praefect_perc_pg_version: "'16'"
 praefect_perc_postgres_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-postgres"
 praefect_perc_postgres_cpu_limit: "500m"
 praefect_perc_postgres_memory_limit: "1024Mi"
@@ -358,11 +358,11 @@ praefect_perc_backup_region: "eu-west-1"
 praefect_perc_backup_full_schedule: "0 1 * * *"
 praefect_perc_backup_diff_schedule: "0 6 * * *"
 praefect_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
-praefect_perc_pgbouncer_replicas: 3
-praefect_perc_pgbouncer_expose_superusers: false
+praefect_perc_pgbouncer_replicas: "'3'"
+praefect_perc_pgbouncer_expose_superusers: "'false'"
 praefect_perc_pgbouncer_pool_mode: session
-praefect_perc_pgbouncer_query_wait_timeout: "10"
-praefect_perc_pgbouncer_max_prepared_statements: "0"
+praefect_perc_pgbouncer_query_wait_timeout: "'10'"
+praefect_perc_pgbouncer_max_prepared_statements: "'0'"
 praefect_perc_pgbouncer_cpu_limit: "200m"
 praefect_perc_pgbouncer_memory_limit: "128Mi"
 praefect_perc_pgbouncer_cpu_request: "100m"
@@ -405,7 +405,7 @@ zitadel_perc_postgres_proxy_replicas: "'1'"
 zitadel_perc_pgdb_helm_version: "2.4.0"
 zitadel_perc_postgres_storage_size: "20Gi"
 zitadel_perc_cr_version: "2.6.0"
-zitadel_perc_pg_version: 16
+zitadel_perc_pg_version: "'16'"
 zitadel_perc_postgres_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-postgres"
 zitadel_perc_postgres_cpu_limit: "500m"
 zitadel_perc_postgres_memory_limit: "1024Mi"
@@ -419,11 +419,11 @@ zitadel_perc_backup_region: "eu-west-1"
 zitadel_perc_backup_full_schedule: "0 1 * * *"
 zitadel_perc_backup_diff_schedule: "0 6 * * *"
 zitadel_perc_pgbouncer_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbouncer1.24.0"
-zitadel_perc_pgbouncer_replicas: 3
-zitadel_perc_pgbouncer_expose_superusers: false
+zitadel_perc_pgbouncer_replicas: "'3'"
+zitadel_perc_pgbouncer_expose_superusers: "'false'"
 zitadel_perc_pgbouncer_pool_mode: session
-zitadel_perc_pgbouncer_query_wait_timeout: "10"
-zitadel_perc_pgbouncer_max_prepared_statements: "1"
+zitadel_perc_pgbouncer_query_wait_timeout: "'10'"
+zitadel_perc_pgbouncer_max_prepared_statements: "'1'"
 zitadel_perc_pgbouncer_cpu_limit: "200m"
 zitadel_perc_pgbouncer_memory_limit: "128Mi"
 zitadel_perc_pgbouncer_cpu_request: "100m"
