--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -302,7 +302,7 @@ gitlab_perc_postgres_cpu_limit: "500m"
 gitlab_perc_postgres_memory_limit: "1024Mi"
 gitlab_perc_postgres_cpu_request: "250m"
 gitlab_perc_postgres_memory_request: "256Mi"
-gitlab_perc_priority_class_name: ""
+gitlab_perc_priority_class_name: "''"
 gitlab_perc_backup_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbackrest2.54.2"
 gitlab_perc_backup_endpoint: "s3.amazonaws.com"
 gitlab_perc_backup_bucket: "giltab-webdb-baackup"
@@ -350,7 +350,7 @@ praefect_perc_postgres_cpu_limit: "500m"
 praefect_perc_postgres_memory_limit: "1024Mi"
 praefect_perc_postgres_cpu_request: "250m"
 praefect_perc_postgres_memory_request: "256Mi"
-praefect_perc_priority_class_name: ""
+praefect_perc_priority_class_name: "''"
 praefect_perc_backup_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbackrest2.54.2"
 praefect_perc_backup_endpoint: "s3.amazonaws.com"
 praefect_perc_backup_bucket: "giltab-praefect-baackup"
@@ -411,7 +411,7 @@ zitadel_perc_postgres_cpu_limit: "500m"
 zitadel_perc_postgres_memory_limit: "1024Mi"
 zitadel_perc_postgres_cpu_request: "250m"
 zitadel_perc_postgres_memory_request: "256Mi"
-zitadel_perc_priority_class_name: ""
+zitadel_perc_priority_class_name: "''"
 zitadel_perc_backup_image: "percona/percona-postgresql-operator:2.6.0-ppg16.8-pgbackrest2.54.2"
 zitadel_perc_backup_endpoint: "s3.amazonaws.com"
 zitadel_perc_backup_bucket: "zitadel-baackup"
