fix appset to use nb xplane

--- a/gitops/applications/base/deploy-env-onboard/kustomization.yaml
+++ b/gitops/applications/base/deploy-env-onboard/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
   - env-onboard-xplane-terraform.yaml
   - env-buckets.yaml
+  - nbenvconfig-claim.yaml
+  - nbopbootstrap-claim.yaml
+  - nboppost-claim.yaml
