Add gitlab-pre overlay app

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/gitlab-pre/rgw-route53-record.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/gitlab-pre/rgw-route53-record.yaml
@@ -1,12 +1,12 @@
 apiVersion: utils.aws.mojaloop.io/v1alpha1
 kind: AWSRoute53Record
 metadata:
-  name: ceph-rgw-endpoint
+  name: ceph-objectstore-rgw
   annotations:
      argocd.argoproj.io/sync-wave: '-5'
 spec:
   parameters:
-    name: s3
+    name: cephobjectstore
     region: eu-west-1
     ttl: 300
     type: A
