--- a/gitops/argo-apps/base/vault-post-config.yaml
+++ b/gitops/argo-apps/base/vault-post-config.yaml
@@ -110,3 +110,9 @@ spec:
 
           - name: "object_storage_access_role"
             value: "${ARGOCD_ENV_maintenance_velero_object_storage_access_role}"
+
+          - name: "cloud_platform_api_client_secret"
+            value: "${ARGOCD_ENV_cloud_platform_api_client_secret}"
+
+          - name: "cloud_platform_api_client_id"
+            value: "${ARGOCD_ENV_cloud_platform_api_client_id}"
