fix: sync waves on vault secret store and external secrets

--- a/gitops/applications/base/vault-post-config/external-secretstore.yaml
+++ b/gitops/applications/base/vault-post-config/external-secretstore.yaml
@@ -53,6 +53,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: vault-secret-store
+  annotations:
+    argocd.argoproj.io/sync-wave: 5
 spec:
   provider:
     vault:
