--- a/gitops/applications/overlays/cloud_provider/aws/vault-post-config/vault-cred-ext-secrets.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/vault-post-config/vault-cred-ext-secrets.yaml
@@ -4,6 +4,8 @@ kind: ExternalSecret
 metadata:
   name: secret-backend-creds
   namespace: ${ARGOCD_ENV_vault_namespace}
+  annotations:
+    argocd.argoproj.io/sync-wave: 10
 spec:
   refreshInterval: 5m
 
@@ -26,4 +28,3 @@ spec:
         property: cloud_platform_api_client_secret
 
 ---
-
