--- a/gitops/applications/overlays/cloud_provider/aws/vault-post-config/vault-cred-xplane-ext-secret.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/vault-post-config/vault-cred-xplane-ext-secret.yaml
@@ -3,6 +3,8 @@ kind: ExternalSecret
 metadata:
   name: secret-aws-xplane-backend-creds
   namespace: ${ARGOCD_ENV_vault_namespace}
+  annotations:
+    argocd.argoproj.io/sync-wave: 10
 spec:
   refreshInterval: 5m
 
@@ -14,7 +16,7 @@ spec:
     name: secret-aws-xplane-backend-creds # Name for the secret to be created on the cluster
     creationPolicy: Owner
     template:
-        data: 
+        data:
            creds: |
                [default]
                 aws_access_key_id = {{ .aws_access_key_id }}
@@ -25,7 +27,7 @@ spec:
             reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
             reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "${ARGOCD_ENV_crossplane_namespace}"
             reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true" # Auto create reflection for matching namespaces
-            reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "${ARGOCD_ENV_crossplane_namespace}"      
+            reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "${ARGOCD_ENV_crossplane_namespace}"
 
   data:
     - secretKey: aws_access_key_id
@@ -38,4 +40,3 @@ spec:
         property: cloud_platform_api_client_secret
 
 ---
-
