--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -103,17 +103,17 @@ crossplane_functions_kcl_version: "0.11.3"
 crossplane_functions_auto_ready_version: "0.4.2"
 crossplane_functions_extra_resources_version: "0.0.3"
 crossplane_packages_objectstores_version: "v0.1.0"
-crossplane_packages_utils_version: "v0.4.1-pr43-14794044845"
-crossplane_packages_gitlab_version: "v0.2.0-pr64-14796403112"
+crossplane_packages_utils_version: "v0.5.0"
+crossplane_packages_gitlab_version: "v0.3.0"
 crossplane_packages_vault_config_version: "v0.1.0"
 crossplane_packages_sc_postgres_version: "v0.2.0"
-crossplane_packages_sc_mysql_version: "v0.1.0-pr43-14832274576"
-crossplane_packages_sc_mongodb_version: "v0.1.0-pr43-14832274576"
+crossplane_packages_sc_mysql_version: "v0.1.0"
+crossplane_packages_sc_mongodb_version: "v0.1.0"
 crossplane_packages_sc_bootstrap_version: "v0.3.0"
-crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr66-14804010083"
+crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr66-14878247009"
 crossplane_packages_nb_config_version: "v0.1.0-pr66-14878247009"
 crossplane_packages_aws_documentdb_version: "v0.3.0-pr50-14597997746"
-crossplane_packages_aws_rds_version: "v0.1.0-pr47-14531737956"
+crossplane_packages_aws_rds_version: "v0.2.0"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
