--- a/gitops/applications/base/sc-storage/objectstore-certs.yaml
+++ b/gitops/applications/base/sc-storage/objectstore-certs.yaml
@@ -55,6 +55,7 @@ spec:
   dnsNames:
   - "rook-ceph-rgw-ceph-objectstore.rook-ceph.svc.cluster.local"
   - "rook-ceph-rgw-ceph-objectstore.rook-ceph.svc"
+  - "${ARGOCD_ENV_storage_rgw_subdomain}"
   ipAddresses:
   - 127.0.0.1
   - ${ARGOCD_ENV_storage_rgw_external_ip}
