--- a/gitops/argo-apps/base/storage-post-config.yaml
+++ b/gitops/argo-apps/base/storage-post-config.yaml
@@ -41,3 +41,5 @@ spec:
             value: "${ARGOCD_ENV_utils_storage_block_storage_class_name}"
           - name: "fs_storage_class_name"
             value: "${ARGOCD_ENV_utils_storage_private_cloud_provider_fs_storage_class_name}"
+          - name: "storage_rgw_subdomain"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_subdomain}"
