Fix storage vars

--- a/gitops/argo-apps/base/sc-storage-post-config.yaml
+++ b/gitops/argo-apps/base/sc-storage-post-config.yaml
@@ -41,3 +41,6 @@ spec:
 
         - name: "rook_ceph_image_version"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_image_version}"
+
+        - name: "storage_rgw_subdomain"
+          value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_subdomain}"
