Add missing vars

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -62,6 +62,12 @@ spec:
             - name: "utils_capi_capi_rook_ceph_rgw_external_ip"
               value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_external_ip}"
 
+            - name: "utils_capi_capi_rook_ceph_rgw_subdomain"
+              value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_subdomain}"
+
+            - name: "utils_capi_capi_rook_ceph_rgw_instance_replicas"
+              value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_instance_replicas}"
+
             # metallb
             - name: "sc_metallb_app_name"
               value: "${ARGOCD_ENV_sc_metallb_app_name}"
