--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -66,7 +66,7 @@ spec:
               value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_subdomain}"
 
             - name: "utils_capi_capi_rook_ceph_rgw_instance_replicas"
-              value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_instance_replicas}"
+              value: '"${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_instance_replicas}"'
 
             # metallb
             - name: "sc_metallb_app_name"
