--- a/gitops/applications/overlays/mongodb_provider/dbaas/deploy-env-onboard/percona-mongodb-cluster.yaml
+++ b/gitops/applications/overlays/mongodb_provider/dbaas/deploy-env-onboard/percona-mongodb-cluster.yaml
@@ -83,7 +83,7 @@ spec:
         priorityClassName: ""
 
     dns:
-      name: ${ARGOCD_ENV_externalservice_name}
+      name: ${ARGOCD_ENV_env_name}-${ARGOCD_ENV_externalservice_name}
       region: ${ARGOCD_ENV_region}
       ttl: 300
       type: A
