Push rgw fqdn to vault

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage-post-config/storage-external-secrets.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage-post-config/storage-external-secrets.yaml
@@ -242,12 +242,12 @@ spec:
     template:
       type: kubernetes.io/rook
       data:
-        rgw-endpoint: "{{ .RGW_ENDPOINT }}"
+        rgw-endpoint: "{{ .RGW_SUB_DOMAIN }}"
   data:
-    - secretKey: RGW_ENDPOINT
+    - secretKey: RGW_SUB_DOMAIN
       remoteRef:
         key: rook-external-config
-        property: RGW_ENDPOINT
+        property: RGW_SUB_DOMAIN
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
