--- a/gitops/argo-apps/base/netbird-pre.yaml
+++ b/gitops/argo-apps/base/netbird-pre.yaml
@@ -334,4 +334,4 @@ spec:
             value: "${ARGOCD_ENV_security_netbird_percona_provider_pgbouncer_memory_request}"
 
           - name: "pgbouncer_expose_type"
-            value: "LoadBalancer"
+            value: "ClusterIP"
