--- a/gitops/argo-apps/base/dns-utils.yaml
+++ b/gitops/argo-apps/base/dns-utils.yaml
@@ -86,3 +86,15 @@ spec:
 
           - name: "vault_namespace"
             value: "${ARGOCD_ENV_vault_vault_namespace}"
+
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
+      path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_utils_storage_cloud_provider}/storage-provider/dns-records
+      plugin:
+        name: envsubst
+        env:
+          - name: "rook_ceph_rgw_external_ip"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_external_ip}"
+
+          - name: "dns_zone_id"
+            value: "${ARGOCD_ENV_utils_storage_dns_zone_id}"
