configure mimir ingester replication factor

--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -5,6 +5,9 @@ mimir:
   overrideConfiguration:
     frontend:
       max_outstanding_per_tenant: 4096
+    ingester:
+      ring:
+        replication_factor: ${ARGOCD_ENV_mimir_ingester_replication_factor}
     compactor:
       deletion_delay: ${ARGOCD_ENV_mimir_compactor_deletion_delay}
     ruler:
