--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -107,6 +107,8 @@ spec:
           value: "${ARGOCD_ENV_monitoring_mimir_max_global_series_per_user}"
         - name: "mimir_ingestion_rate"
           value: "${ARGOCD_ENV_monitoring_mimir_ingestion_rate}"
+        - name: "mimir_ingester_replication_factor"
+          value: "${ARGOCD_ENV_monitoring_mimir_ingester_replication_factor}"
         - name: "mimir_ingestion_burst_size"
           value: "${ARGOCD_ENV_monitoring_mimir_ingestion_burst_size}"
         - name: "mimir_retention_period"
