remove match labels for policy and use name

--- a/gitops/applications/base/sc-storage/kyverno-policy.yaml
+++ b/gitops/applications/base/sc-storage/kyverno-policy.yaml
@@ -31,10 +31,8 @@ spec:
         targets:
         - apiVersion: apps/v1
           kind: Deployment
+          name: rook-ceph-rgw-default-a
           namespace: ${ARGOCD_ENV_storage_namespace}
-          selector:
-            matchLabels:
-              app.kubernetes.io/name: ceph-rgw
       preconditions:
         any:
         - key: '{{`{{request.operation}}`}}'
