--- a/gitops/applications/base/sc-storage/kyverno-policy.yaml
+++ b/gitops/applications/base/sc-storage/kyverno-policy.yaml
@@ -36,7 +36,7 @@ spec:
       preconditions:
         any:
         - key: '{{`{{request.operation}}`}}'
-          operator: In
+          operator: Equals
           value: UPDATE
       skipBackgroundRequests: true
   validationFailureAction: Audit
