--- a/gitops/applications/base/sc-storage/kustomization.yaml
+++ b/gitops/applications/base/sc-storage/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - objectstore-certs.yaml
+  # - objectstore-certs.yaml
   - ceph-cluster-crs.yaml
   - ceph-blockpools-crs.yaml
   - ceph-objectstore-crs.yaml
@@ -12,7 +12,7 @@ resources:
   - rbac.yaml
   - rgw-endpoint-job.yaml
   - https://raw.githubusercontent.com/rook/rook/refs/tags/v${ARGOCD_ENV_rook_ceph_version}/deploy/examples/toolbox.yaml
-  - kyverno-policy.yaml
+  # - kyverno-policy.yaml
 
 helmCharts:
   - name: rook-ceph
