--- a/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
@@ -4,10 +4,10 @@ kind: Kustomization
 resources:
   # utils
   - ./sc-argocd.yaml
-  - ../../../base/metallb.yaml
-  - ../../../base/sc-storage.yaml
-  - ../../../base/sc-storage-post-config.yaml
-  - ../../../base/cert-manager.yaml
-  - ../../../base/percona-operator.yaml
-  - ../../../base/base-monitoring.yaml
-  - ../../../base/kyverno.yaml
+  # - ../../../base/metallb.yaml
+  # - ../../../base/sc-storage.yaml
+  # - ../../../base/sc-storage-post-config.yaml
+  # - ../../../base/cert-manager.yaml
+  # - ../../../base/percona-operator.yaml
+  # - ../../../base/base-monitoring.yaml
+  # - ../../../base/kyverno.yaml
