fix kyverno policy

--- a/gitops/applications/base/sc-storage/kyverno-policy.yaml
+++ b/gitops/applications/base/sc-storage/kyverno-policy.yaml
@@ -11,7 +11,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "0"
 spec:
   rules:
-    - name: add-annotation-on-rgw-secret-update
+    - name: add-annotation-on-secret-update
       match:
         any:
         - resources:
@@ -27,15 +27,17 @@ spec:
             template:
               metadata:
                 annotations:
-                  kyverno.platform.eon.com/triggerrestart: '{{`{{request.object.metadata.resourceVersion}}`}}'
+                  kyverno.platform.eon.com/triggerrestart: "{{request.object.metadata.resourceVersion}}"
         targets:
         - apiVersion: apps/v1
           kind: Deployment
-          name: rook-ceph-rgw-default-a
           namespace: ${ARGOCD_ENV_storage_namespace}
+          selector:
+            matchLabels:
+              app: rook-ceph-rgw
       preconditions:
-        any:
-        - key: '{{`{{request.operation}}`}}'
+        all:
+        - key: "{{request.operation}}"
           operator: Equals
           value: UPDATE
       skipBackgroundRequests: true
