Pass Argocd chart version

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -7,6 +7,7 @@ spec:
   parameters:
     argocd:
       application:
+        chartVersion: "${ARGOCD_ENV_utils_argocd_helm_helm_version}"
         source:
           targetRevision: "${ARGOCD_ENV_sc_application_gitrepo_tag}"
           envVars:
