--- a/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   # utils
-  # - ./sc-argocd.yaml
+  - ./sc-argocd.yaml
   - ../../../base/metallb.yaml
   - ../../../base/sc-storage.yaml
   - ../../../base/sc-storage-post-config.yaml
