feat: add zitadel provider with argocd-config package

--- a/gitops/argo-apps/base/crossplane-packages.yaml
+++ b/gitops/argo-apps/base/crossplane-packages.yaml
@@ -70,3 +70,6 @@ spec:
 
         - name: "crossplane_packages_vault_config_version"
           value: "${ARGOCD_ENV_utils_crossplane_packages_vault_config_version}"
+
+        - name: "crossplane_packages_argocd_config_version"
+          value: "${ARGOCD_ENV_utils_crossplane_packages_argocd_config_version}"
