--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -94,3 +94,11 @@ metadata:
 spec:
   package: ghcr.io/mojaloop/iac-crossplane-packages/sc-mongodbcluster:${ARGOCD_ENV_crossplane_packages_sc_mongodb_version}
   skipDependencyResolution: true
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: argocd-config
+spec:
+  package: ghcr.io/mojaloop/iac-crossplane-packages/argocd-config:${ARGOCD_ENV_crossplane_packages_argocd_config_version}
+  skipDependencyResolution: true
