--- a/terraform/k8s/default-config/common-vars.yaml
+++ b/terraform/k8s/default-config/common-vars.yaml
@@ -26,6 +26,7 @@ opentelemetry_namespace_filtering_enable: false
 prometheus_crd_version: 8.0.1
 prometheus_operator_version: 8.22.8
 prometheus_process_exporter_version: 0.4.2
+process_exporter_enabled: false
 grafana_operator_version: 3.5.11
 grafana_version: 11.6.1
 grafana_dashboard_tag: v16.3.0-snapshot.24 # TODO: update once v16.1.x is published
