set default calico chart ver

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: ${ARGOCD_ENV_capi_cluster_namespace}
 spec:
   parameters:
+    calico:
+      chartVersion: "3.30.0"
     argocd:
       chartVersion: "${ARGOCD_ENV_utils_argocd_helm_helm_version}"
       application:
